--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
             <a href="about.html">About Us</a>
         </nav>
     </header>
-    <div class="container">
-        <h1>D3 Tasks</h1>
-        <h2>Tasks 4.2-4.7</h2>
-        <svg></svg>
-    </div>
+    <div class="responsive-svg-container"></div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer class="footer">2025 Riley Turner</footer>
 
